--- a/homePage/templates/nav.html
+++ b/homePage/templates/nav.html
@@ -1,9 +1,11 @@
 <div>
 {% if user.is_authenticated %}
-<a href='#'>Log out</a>
+<a href='account/logout'>Log out</a>
 <br>
+
+<h2>Hi {{user}}!</h2>
 {% else %}
-<a href='#'>Log in</a>
-<a href='#'>Register</a>
+<a href='account/login'>Log in</a>
+<a href='account/register'>Register</a>
 {% endif %}
 </div>
