cambiando la url de list a problemset

--- a/chess/templates/chess.html
+++ b/chess/templates/chess.html
@@ -6,7 +6,7 @@
     <body>
       <h1>Bienvenido al GameChess</h1>
       <h2>Descripcion Piezas</h2>
-      <a href="chessList/">Listado de Problemas</a>
+      <a href="problemset/">Listado de Problemas</a>
     </body>
 </html>
 
