agregando nombre de pagina

--- a/chess/templates/chessProblemset.html
+++ b/chess/templates/chessProblemset.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <title></title>
+        <title>Problemset</title>
     </header>
     <body>
         <h2>Problemset</h2>
