--- a/chess/templates/chessProblemDescription.html
+++ b/chess/templates/chessProblemDescription.html
@@ -2,6 +2,7 @@
 <html>
     <header>
         <title>Problem</title>
+        <!--codemirror-->
         <script src='/static/codemirror/lib/codemirror.js'></script>
         <link rel='stylesheet' href='/static/codemirror/lib/codemirror.css'/>
         <script src='/static/codemirror/mode/python/python.js'></script>
@@ -15,47 +16,74 @@
         <link rel='stylesheet' href='/static/codemirror/theme/elegant.css'/>
         <link rel='stylesheet' href='/static/codemirror/theme/xq-light.css'/>
         <link rel='stylesheet' href='/static/codemirror/theme/mdn-like.css'/>
+
+        <!--otro-->
+        <link rel='stylesheet' href='/static/css/chessProblemDescription.css'/>
     </header>
     <body>
         {% load static %}
         <div>
-            <h3>{{ object.nameProblem }}</h3>
-            <p>{{ object.description }}</p>
-        </div>
-        <div>
-            <h4>Try to solve this problem</h4>
             <div class='mainBox'>
-                <div class='upBox'>
+                <!--Lugar de visualizacion del problema-->
+                <div class='leftBox'>
+                    <h3>{{ object.nameProblem }}</h3>
+                    <p>{{ object.description }}</p>
+                    <p>Here is the expected output:</p>
+                    <!--Solucion esperada-->
                     <div class='leftBox'>
-                        <img src='#' alt='imageChessProblem'>
-                    </div>
-                    <div class='rightBox'>
-                        {% if image %}
-                        <img src='{{ image.url }}' alt='imageChessSolution'>
-                        {% else %}
-                        <img src='#' alt='imageChessSolution'>
-                        {% endif %}
+                        <img width='350' height='350' src='#' alt='imageChessProblem'>
                     </div>
                 </div>
-                <div class='downBox'>
-                    <div class='codeBox'>
-                        <form action='.' method='GET'>
-                            <textarea id='editor' name='input'>{{ code }}</textarea>
-                            <script>
-                                var editor = CodeMirror.fromTextArea(document.getElementById('editor'), {
-                                    mode: "python",
-                                    theme: "mdn-like",
-                                    lineNumbers: true
-                                });
-                                editor.setSize("550", "300");
-                            </script>
-                            <br>
-                            <br>
-                            <input type='submit' value='Send'/>
-                        </form>
-                    </div>
-                    <div class='errorBox'>
-                        <a id='errorText'>{{ error }}</a>
+                <!--Lugar de solucion y visualizacion de la salida-->
+                <div class='rightBox'>
+                    <div class='rightBoxContent'>
+                        <!--Lugar de escritura de codigo-->
+                        <div class='upBox'>
+                            <div class='codeBox'>
+                                <form action='.' method='GET'>
+                                    <textarea id='editor' name='input'>{{ code }}</textarea>
+                                    <script>
+                                        var editor = CodeMirror.fromTextArea(document.getElementById('editor'), {
+                                            mode: "python",
+                                            theme: "mdn-like",
+                                            lineNumbers: true
+                                        });
+                                        //editor.setSize("550", "300");
+                                    </script>
+                                    <br>
+                                    <br>
+                                    <input type='submit' value='Send'/>
+                                </form>
+                            </div>
+                        </div>
+                        <br>
+                        <!--Solucion de cada usuario-->
+                        <div class='downBox'>
+                            {% if error != ''%}
+                            <div id='resultContent'>
+                                <p id='errorText'>{{ error }}</p>
+                            </div>
+                            {% else %}
+                            <div id='resultContent' style='display:flex; justify-content: center;'>
+                                {% if image %}
+                                <div id='resultContentContent'>
+                                    <div style='display: block'>
+                                        <div id='imageSolution'>
+                                            <img width='350' height='350' src='{{ image.url }}' alt='imageChessSolution'>
+                                        </div>
+                                        <div id='coincidence'>
+                                            <p>{{ coincidence }}% of coincidence.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% else %}
+                                <div id='preOutput'>
+                                    <p>Your output will be displayed here.</p>
+                                </div>
+                                {% endif %}
+                            </div>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
