agregando la url de imagechessproblems

--- a/chess/templates/chessProblemDescription.html
+++ b/chess/templates/chessProblemDescription.html
@@ -31,7 +31,7 @@
                     <p>Here is the expected output:</p>
                     <!--Solucion esperada-->
                     <div class='leftBox'>
-                        <img width='350' height='350' src='#' alt='imageChessProblem'>
+                        <img width='350' height='350' src='{{ object.imageChessProblem.url }}' alt='imageChessProblem'>
                     </div>
                 </div>
                 <!--Lugar de solucion y visualizacion de la salida-->
