agregando porcentaje de coindencia

--- a/chess/templates/chessProblemDescription.html
+++ b/chess/templates/chessProblemDescription.html
@@ -76,7 +76,7 @@
                                             <img id='imageSolution' width='350' height='350' src='{{ image.url }}' alt='imageChessSolution'>
                                         </div>
                                         <div id='coincidence'>
-                                            <p>{{ coincidence }}% of coincidence.</p>
+                                            <p>{{ objectSolution.matchingChessSolution }}% of coincidence.</p>
                                         </div>
                                     </div>
                                 </div>
