--- a/chess/templates/chessProblemDescription.html
+++ b/chess/templates/chessProblemDescription.html
@@ -69,11 +69,11 @@
                             </div>
                             {% else %}
                             <div id='resultContent' style='display:flex; justify-content: center;'>
-                                {% if image %}
+                                {% if objectSolution %}
                                 <div id='resultContentContent'>
                                     <div style='display: block'>
                                         <div id='imageSolutionContainer'>
-                                            <img id='imageSolution' width='350' height='350' src='{{ image.url }}' alt='imageChessSolution'>
+                                            <img id='imageSolution' width='350' height='350' src='{{ objectSolution.imageChessSolution.url }}' alt='imageChessSolution'>
                                         </div>
                                         <div id='coincidence'>
                                             <p>{{ objectSolution.matchingChessSolution }}% of coincidence.</p>
