--- a/homePage/templates/home.html
+++ b/homePage/templates/home.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <header>
-        <title>Home</title>
-    </header>
-    <body>
-        <div>
-            {% include 'nav.html' %}
-        </div>
-    </body>
-</html>
+{% extends 'general-content.html' %}
+{% block content %}
 
+<h1>Welcome</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non<Plug>PeepOpenroident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<hr>
+<h3>Test</h3>
+<p>Lorem ipsum...</p>
+
+{% endblock %}
