--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
-<html>
-    <header>
-        <title>Login</title>
-    </header>
-    <body>
-        <form action='login' method='POST'>
-            {% csrf_token %}
-            <input type='text' name='userName' placeholder='Username'><br>
-            <input type='password' name='password' placeholder='password'><br>
-            <input type='submit' value='submit'>
-        </form>
-        <a>{{ error }}</a>
-    </body>
-</html>
+{% extends 'general-content.html' %}
+{% block content %}
 
+<div class="form-container">
+    <div class="form-box">
+        <h2>Login</h2>
+        <form action="login" method='POST'>
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="email">User:</label>
+                <input type="text" class="form-control" placeholder="Enter username" name="userName">
+            </div>
+            <div class="form-group">
+                <label for="pwd">Password:</label>
+                <input type="password" class="form-control" id="pwd" placeholder="Password" name="password">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+
+        <br>
+        <p id='errorMessage'>{{ error }}</p>
+    </div>
+</div>
+
+{% endblock %}
