--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,22 +1,46 @@
-<!DOCTYPE html>
-<html>
-    <header>
-        <title>Registration</title>
-    </header>
-    <h2>Registro</h2>
-    <body>
-        <form action='register' method='POST'>
-            {% csrf_token %}
-            <input type='text' name='firstName' placeholder='First Name'><br>
-            <input type='text' name='lastName' placeholder='Last Name'><br>
-            <input type='text' name='userName' placeholder='user'><br>
-            <input type='email' name='mail' placeholder='Email'><br>
-            <input type='text' name='birthday' placeholder='birthday'><br>
-            <input type='text' name='password1' placeholder='Password'><br>
-            <input type='text' name='password2' placeholder='Confirm your password'><br>
-            <input type='submit' value='Submit'>
-        </form>
-        <a>{{ error }}</a>
-    </body>
-</html>
+{% extends 'general-content.html' %}
+{% block content %}
 
+<div class="form-container">
+    <div class="form-box">
+        <h2>Register</h2>
+
+        <form action="register" method='POST'>
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="firstName">First name:</label>
+                <input type="text" class="form-control" id='firstName' placeholder="First name" name="firstName" required>
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last name:</label>
+                <input type="text" class="form-control" id="lastName" placeholder="Last name" name="lastName" required>
+            </div>
+            <div class="form-group">
+                <label for="userName">Username:</label>
+                <input type="text" class="form-control" id="userName" placeholder="Username" name="userName" required>
+            </div>
+            <div class="form-group">
+                <label for="mail">Email:</label>
+                <input type="email" class="form-control" id="mail" placeholder="Email" name="mail" required>
+            </div>
+            <div class="form-group">
+                <label for="birthday">Birthday:</label>
+                <input type="date" class="form-control" id="birthday" name="birthday" required>
+            </div>
+            <div class="form-group">
+                <label for="password1">Password:</label>
+                <input type="password" class="form-control" id="password1" placeholder="Password" name="password1" required>
+            </div>
+            <div class="form-group">
+                <label for="password2">Repeat your password:</label>
+                <input type="password" class="form-control" id="password2" placeholder="Confirm your password" name="password2" required>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+
+        <br>
+        <p id='errorMessage'>{{ error }}</p>
+    </div>
+</div>
+
+{% endblock %}
