--- a/homePage/templates/general-content.html
+++ b/homePage/templates/general-content.html
@@ -7,7 +7,7 @@
 
         <!--Bootstrap CSS and other CSS-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/static/css/aditionalForm.css"/>
         <link rel='stylesheet' href='/static/css/aditionalNav.css'/>
 
         <title>Home</title>
