--- a/homePage/templates/nav.html
+++ b/homePage/templates/nav.html
@@ -14,10 +14,10 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-            <li><a href="account/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+            <li><a href="/account/logout"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
             {% else %}
-            <li><a href="account/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="account/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a href="/account/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="/account/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             {% endif %}
         </ul>
     </div>
