link estatico de retorno y listando los problemas

--- a/chess/templates/chessProblemDescription.html
+++ b/chess/templates/chessProblemDescription.html
@@ -94,7 +94,7 @@
             </div>
         </div>
 
-        <a href='../../problemset/'>back to problemset</a>
+        <a href='/chess/problemset/'>back to problemset</a>
     </body>
 </html>
 
