--- a/chess/static/css/chessProblemDescription.css
+++ b/chess/static/css/chessProblemDescription.css
@@ -11,6 +11,8 @@ html, body{
 }
 .leftBox{
     flex-basis: 50%;
+    padding: 20px;
+    font-size: 16px;
 }
 .rightBox{
     display: flex;
@@ -65,4 +67,10 @@ html, body{
     align-items: center;
     width: 350px;
     height: 350px;
+}
+.imageBox{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
