--- a/chess/static/css/chessProblemDescriptionNav.css
+++ b/chess/static/css/chessProblemDescriptionNav.css
@@ -1,12 +1,11 @@
 .navbargame {
     border-radius: 0px;
     position: relative;
-    min-height: 80px;
     margin-bottom: 20px;
     border: 1px solid transparent;
 }
 .container-fuild-game{
-    padding: 15px;
+    padding: 19px;
 }
 .navbar-nav>li>p{
     padding-left: 25px;
@@ -22,4 +21,7 @@
     font-size: 16px;
     padding-top: 14px;
     padding-bottom: 14px;
+}
+.navbargame{
+    border: 0px;
 }
