--- a/chess/templates/chess-nav.html
+++ b/chess/templates/chess-nav.html
@@ -1,7 +1,11 @@
 <nav class="navbargame navbar-inverse navbar-fixed-top">
     <div class="container-fuild-game">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/chess/problemset/"> Atras </a>
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" style='color: yellow;' class="bi bi-arrow-left-circle-fill" viewBox="-4 -4 20 20">
+                <a href="/chess/problemset/">
+                    <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+                </a>
+            </svg>
         </div>
         <ul class="nav navbar-nav">
             <li><p id='problemName'><b>{{object.nameProblem}}</b></p></li>
